--- a/index.html
+++ b/index.html
@@ -2,5 +2,8 @@
     <p>
         This is a paragraph.
     </p>
+    <style>
+        img {width: 100%;}
+    </style>
     <img src="images/BMW Logo.jpg" alt="BMW Logo">
 </html>
