--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>JDInventor</title>
+</head>
+<body>
     <p>
         This is a paragraph.
     </p>
-    <style>
-        img {width: 100%;}
-    </style>
     <img src="images/BMW Logo.jpg" alt="BMW Logo">
+</body>
 </html>
