Testing out nav tags

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>JDInventor</title>
 </head>
 <body>
+    <nav>
+        <div class="logo">JDInventor</div>
+        <div class="nav-items"></div>
+        <a href="/">About</a>
+        <a href="/">FAQs</a>
+        <a href="/">Contact</a>
+    </nav>
     <p>
         This is a paragraph.
     </p>
