--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JDInventor</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <nav>
         <div class="logo">JDInventor</div>
         <div class="nav-items"></div>
-        <a href="/">About</a>
-        <a href="/">FAQs</a>
-        <a href="/">Contact</a>
+            <a href="projects.html">Projects</a>
     </nav>
-    <p>
-        This is a paragraph.
+    <p class="body-text">
+        Welcome to JDInventor! This is my personal website where I detail my projects as an engineering student. This website
+        is my foray into web development. Hosted by GitHub Pages & planning on using the Jekyll static site generator eventually.
     </p>
     <img src="images/BMW Logo.jpg" alt="BMW Logo">
 </body>
