Learning CSS layouts

--- a/index.html
+++ b/index.html
@@ -9,15 +9,18 @@
 </head>
 
 <body>
-    <nav>
-        <div class="logo">JDInventor</div>
-        <div class="nav-items"></div>
-            <a href="projects.html">Projects</a>
-    </nav>
+    <header>
+        <nav>
+            <div class="logo">JDInventor</div>
+            <div class="nav-items">
+                <a href="projects.html">Projects</a>
+            </div>
+        </nav>
+    </header>
+    
     <p class="body-text">
         Welcome to JDInventor! This is my personal website where I detail my projects as an engineering student. This website
         is my foray into web development. Hosted by GitHub Pages & planning on using the Jekyll static site generator eventually.
     </p>
-    <img src="images/BMW Logo.jpg" alt="BMW Logo">
 </body>
 </html>
